--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,16 @@
     android:background="#0070CC"
     tools:context=".Sign_up"
     tools:ignore="ExtraText">
-
+    <View
+        android:id="@+id/rectangle_81"
+        android:layout_width="430dp"
+        android:layout_height="871dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/rectangle_8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/signup"
@@ -28,14 +37,14 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="349dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_margin="10dp"
         android:background="#50ffffff"
 
         android:drawablePadding="20dp"
         android:hint="E-mail"
-        android:padding="20dp"
+
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,16 +55,16 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="331dp"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_below="@+id/email"
         android:layout_margin="10dp"
         android:background="#50ffffff"
 
-        android:drawablePadding="20dp"
+
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="20dp"
+
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,7 +76,7 @@
 
     <EditText
         android:id="@+id/repassword"
-        android:layout_width="361dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_below="@+id/password"
         android:layout_margin="10dp"
@@ -76,7 +85,7 @@
         android:drawablePadding="20dp"
         android:hint="Re-Password"
         android:inputType="textPassword"
-        android:padding="20dp"
+
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -126,16 +135,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
 
-    <View
-        android:id="@+id/rectangle_81"
-        android:layout_width="430dp"
-        android:layout_height="871dp"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/rectangle_8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <View
         android:id="@+id/image_2"
@@ -164,17 +164,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/rectangle_11"
-        android:layout_width="333dp"
-        android:layout_height="39dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="430dp"
-        android:background="@drawable/rectangle_3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/password2"
@@ -191,17 +181,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/rectangle_22"
-        android:layout_width="333dp"
-        android:layout_height="39dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="516dp"
-        android:background="@drawable/rectangle_3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/re_password"
@@ -218,17 +198,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/rectangle_33"
-        android:layout_width="333dp"
-        android:layout_height="39dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="608dp"
-        android:background="@drawable/rectangle_3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <View
         android:id="@+id/rectangle_2"
